# Netpulse

./: .dockerignore  .env.example  .gitignore  DEV_GUIDE.md  Dockerfile  OPS_GUIDE.md  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml  requirements.txt  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml
app/: main.py  tasks.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  assist.py  auth.py  backup.py  captures.py  chatbot.py  device_actions.py  devices.py  google_auth.py  health.py  insights.py  logs.py  metrics.py  network_segments.py  nmap.py  packets.py  pcaps.py  playbooks.py  plugins.py  recon.py  reports.py  routers.py  scripts.py  settings.py  snmp.py  syslog_receiver.py  threat_intel.py  uptime.py  vault.py  ws.py
app/core/: __init__.py  celery_app.py  config.py  redis.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  audit_log.py  device.py  device_baseline.py  enforcement_action.py  metric.py  network_segment.py  packet_capture.py  pcap_meta.py  router.py  router_config_baseline.py  scan_job.py  script_job.py  security_telemetry.py  syslog_event.py  uptime.py  user.py  user_settings.py  vulnerability.py
app/plugins/: __init__.py
app/plugins/builtin/: arp_spoof_detector.py  port_knock_detector.py  rogue_dhcp_detector.py
app/services/: __init__.py  abuseipdb.py  alerts.py  arp_spoof.py  enforcement.py  latency_monitor.py  logging_service.py  network_insights.py  nmap_runner.py  nmap_service.py  packet_capture.py  passive_monitor.py  peer_discovery.py  recon.py  script_executor.py  snmp_poller.py  splunk_service.py
app/services/routers/: __init__.py  mikrotik.py  netmiko_driver.py
data/scans/: .gitkeep  nmap_scan_output_192-168-10-1_bcd4ce0b.txt  scan_162c578b_20260124_123812.txt  scan_f98ee5c0_20260124_124332.txt
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: dev_guide.md  frontend_tightening.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  shims-modules.d.ts
frontend/src/assets/: styles.css
frontend/src/components/: BrainPanel.vue  ChatBot.vue  CommandPalette.vue  DeviceDrawer.vue  LiveTerminal.vue  PulsePanel.vue  ToggleSwitch.vue  TopologyPanel.vue
frontend/src/composables/: useWebSocket.ts
migrations/: 20260223_add_pcap_meta_tables.sql  20260223_add_pcap_zeek_summary.sql  20260223_add_router_config_baselines.sql  20260223_add_snmp_router_tables.sql
probes/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go  probe_test.go
probes/src/: event.rs  main.rs  parser.rs  publisher.rs
scripts/: Settings.broken.vue  captures.broken.py  check_backend.py  db_check.py  dev_backend.sh  dev_beat.sh  dev_frontend.sh  dev_worker.sh  docker_reset.sh  packets.broken.py  run_stack.sh  run_stack_windows.bat  run_stack_windows.ps1  setup_linux.sh  setup_windows.bat  setup_windows.ps1  windows_run_stack.bat  windows_setup.bat
scripts/migrations/: 20260223_rbac_audit.sql
scripts/prebuilt/: backup_switch.py  config_drift_report.py  defense_block_ip.py  device_inventory_export.py  kill_switch.py  malformed_overlap_fragments.py  malformed_syn_flood.py  malformed_xmas_scan.py  new_device_report.py  nmap_smb_audit.py  nmap_web_recon.py  replay_pcap.py  snmp_arp_discovery.py  wan_health_pdf_report.py  wan_health_report.py
tests/: conftest.py  test_config.py  test_health.py  test_logs.py  test_network_segments.py  test_nmap.py  test_rbac.py
(+31 files in other folders)
