[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fpdf2>=2.8.5",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "python-nmap>=0.7.1",
    "redis>=7.1.0",
    "reportlab>=4.4.9",
    "scapy>=2.7.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = ["vulture>=2.14", "ruff>=0.11.0", "pytest>=8.0.0", "pytest-asyncio>=0.25.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.vulture]
min_confidence = 80
paths = ["app", "vulture_whitelist.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E/W — pycodestyle style errors and warnings
# F   — pyflakes (real logical errors)
select = ["E", "F", "W"]
ignore = [
    # ── Pre-existing patterns in the codebase (do not remove until cleaned up) ──
    "E402",  # Module-level import not at top of file (deps.py uses module-docstring-first pattern)
    "E501",  # Line too long (not enforced yet)
    "F401",  # Imported but unused (many are intentional re-exports / conditional imports)
    "F821",  # Undefined name (SQLAlchemy TYPE_CHECKING forward references not visible to ruff)
    "F841",  # Local variable assigned but never used
    "F541",  # f-string without any placeholders
    "E712",  # Avoid equality comparisons to True/False (SQLAlchemy uses == True for ORM queries)
]

